Got a running example.

--- a/ood_test.html
+++ b/ood_test.html
@@ -1,10 +1,15 @@
-\<html>
+<html>
 	<head>
 		<title>ood_test</title>
+	</head>
+	<body>
+		<pre id="out"></pre>
 		<script src="utils/require.js"></script>
 		<script>
+		GLOBAL = this;
+		require._current_module_dir = 'utils/';
 		require = (function(req){
-			
+			var out = document.getElementById('out');
 			var sys = {
 				puts: function(str) {
 					out.innerHTML = out.innerHTML + str + '\n';
@@ -17,8 +22,5 @@
 		})(require);
 		</script>
 		<script src="utils/run.js"></script>
-	</head>
-	<body>
-		<pre id="out"></pre>
 	</body>
 </html>
