--- a/ood_test.html
+++ b/ood_test.html
@@ -15,11 +15,23 @@
 					out.innerHTML = out.innerHTML + str + '\n';
 				}
 			};
-			
+
 			return function(id) {
 				return (id == 'sys') ? sys : req(id);
 			};
 		})(require);
+
+		var query = window.location.search.substr(1);
+		var args = {}
+		if (query) {
+			var tokens = query.split(/[&=]/);
+			for (var i = 0, l = tokens.length; i < l; i += 2) args[tokens[i]] = tokens[i + 1] || '';
+		}
+
+		// Emulate the CLI arguments
+		process = {ARGV: []};
+		process.ARGV[1] = args.example;
+		process.ARGV[2] = args.generator;
 		</script>
 		<script src="utils/run.js"></script>
 	</body>
